Align tabs to baseline to avoid misaligning when text is too long

--- a/packages/styles/src/tabs/tabs.scss
+++ b/packages/styles/src/tabs/tabs.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  align-items: center;
+  align-items: baseline;
   margin: 0;
   overflow-x: auto;
   background: var(--as-color-ui-01, #{$color-ui-01});
